...
                android:text="Cancel" />

            <View android:layout_width="16dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Confirm" />
        </LinearLayout>
    </LinearLayout>
...
